[gd_scene load_steps=10 format=3 uid="uid://p58hs5ikh1wf"]

[ext_resource type="Script" uid="uid://qskikep2bddt" path="res://Scripts/level_finished.gd" id="1_03a8y"]
[ext_resource type="Texture2D" uid="uid://2qhmrpjy62ih" path="res://Assets/Buttons/Leaderboard.png" id="1_t70o4"]
[ext_resource type="Texture2D" uid="uid://dk4phovqr2v7a" path="res://Assets/Buttons/Back.png" id="2_uk60o"]
[ext_resource type="Texture2D" uid="uid://worxx6ujfo3s" path="res://Assets/Buttons/Restart.png" id="3_03a8y"]
[ext_resource type="Texture2D" uid="uid://iy8hsqq6otta" path="res://Assets/Buttons/Next.png" id="4_oixcc"]
[ext_resource type="FontFile" uid="uid://b17841n0v0l54" path="res://Assets/Text/Pixel Font.ttf" id="5_uk60o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80snh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uk60o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_03a8y"]

[node name="LevelFinished" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03a8y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -79.5
offset_right = 171.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_80snh")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Leaderboard" type="TextureRect" parent="PanelContainer/HBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_t70o4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
alignment = 2

[node name="LevelTime" type="RichTextLabel" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_uk60o")
theme_override_font_sizes/normal_font_size = 30
text = "123.4"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="BackButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_uk60o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_03a8y")
icon = ExtResource("2_uk60o")
flat = true
expand_icon = true

[node name="RestartButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_uk60o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_03a8y")
icon = ExtResource("3_03a8y")
flat = true
expand_icon = true

[node name="NextLevelButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_uk60o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_03a8y")
icon = ExtResource("4_oixcc")
flat = true
expand_icon = true

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/NextLevelButton" to="." method="_on_next_level_button_pressed"]
